<resources>
    <string name="app_name">로스트아크 어시스턴트</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_gallery">스톤 세공 시뮬레이션</string>
    <string name="menu_slideshow">각인 계산서</string>
    <string name="menu_commander">숙제</string>
    <string name="menu_stamp">각인 효과</string>
    <string name="menu_chracter">캐릭터 검색</string>
    <string name="menu_skill">스킬 시뮬레이션</string>
    <string name="menu_tools">도구</string>
    <string name="menu_guild">길드 홍보</string>

    <string name="home_second">Home Second</string>
</resources>
