<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_commander"
            android:icon="@drawable/nav_boss_icon"
            android:title="@string/menu_commander" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/nav_stone_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/nav_stamp_simul_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_stamp"
            android:icon="@drawable/nav_stamp_icon"
            android:title="@string/menu_stamp" />
        <!--<item
            android:id="@+id/nav_chracter"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_chracter" />-->
        <item
            android:id="@+id/nav_skill"
            android:icon="@drawable/ic_streetview_black_24dp"
            android:title="@string/menu_skill" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_baseline_build_24"
            android:title="@string/menu_tools" />
    </group>
</menu>
