<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lostark.lostarkapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.lostark.lostarkapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lostark.lostarkapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lostark.lostarkapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_commander"
        android:name="com.lostark.lostarkapplication.ui.commander.CommanderFragment"
        android:label="@string/menu_commander"
        tools:layout="@layout/fragment_commander" />

    <fragment
        android:id="@+id/nav_stamp"
        android:name="com.lostark.lostarkapplication.ui.stamp.StampFragment"
        android:label="@string/menu_stamp"
        tools:layout="@layout/fragment_stamp" />

    <fragment
        android:id="@+id/nav_chracter"
        android:name="com.lostark.lostarkapplication.ui.chracter.ChracterFragment"
        android:label="@string/menu_chracter"
        tools:layout="@layout/fragment_chracter" />

    <fragment
        android:id="@+id/nav_skill"
        android:name="com.lostark.lostarkapplication.ui.skill.SkillFragment"
        android:label="@string/menu_skill"
        tools:layout="@layout/fragment_skill" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.lostark.lostarkapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_guild"
        android:name="com.lostark.lostarkapplication.ui.guild.GuildFragment"
        android:label="@string/menu_guild"
        tools:layout="@layout/fragment_guild" />
</navigation>